<resources>
    <string name="app_name">Launcher Didihu</string>
    <string name="device_info">设备信息</string>
    <string name="systemupdata_info">系统更新</string>
    <string name="txz_sdk_init_app_id">54f42705d7cb0374986718af7c0cbcb5</string>
    <string name="txz_sdk_init_app_token">d445cbd6a1f35bc2f330ea42ab3cde3ce8842f86</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="screen_timeout">Sleep</string>
    <string name="wifi_setting">WIFI manager</string>
    <string name="data_setting">Data manager</string>
    <string name="storage_setting">Storage manager</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- System Settings-->
    <string name="setting_wifi">WLAN</string>
    <string name="setting_sdcard">SD卡信息</string>
    <string name="setting_app_running">应用</string>
    <string name="setting_time_data">时间和日期</string>
    <string name="setting_network">移动网络</string>

    <!-- 导航Dialog -->
    <string name="navi_text_kailide"> 凯立德导航</string>
    <string name="navi_radio_normal">设为默认导航</string>
    <string name="navi_text_gaode"> 高德导航</string>
    <string name="navi_title">请选择导航应用</string>
    <string name="navi_baidu">百度导航</string>

    <!-- 设置-->
    <string name="normal_settings">常规设置</string>
    <string name="system_settings">系统设置</string>

    <string name="loaction_prod_name">移动定位器，随时随地确认我当前的位置</string>
    <string name="dialog_name_gps">GPS定位</string>
    <string name="dialog_gps_content">您的GPS没有开启，是否去开启？（开启后可以为您提供更精确的定位服务。）</string>
    <string name="dialog_btn_open">去开启</string>
    <string name="dialog_btn_cancel">否，谢谢</string>
    <string name="dialog_name_network">网络异常</string>
    <string name="dialog_network_content">没有找到可用的网络，请确认WLAN、3G、2G网络至少有一项可以使用。</string>
    <string name="dialog_btn_setting">设置</string>
    <string name="dialog_btn_exit">退出</string>
    <string name="notification_network_title">网络不可用，请确认WLAN、3G、2G网络至少有一项可以使用。</string>
    <string name="notification_network_name">移动定位器提醒您</string>
    <string name="notification_network_content">网络异常，请确认WLAN、3G、2G网络至少有一项可以使用</string>
    <string name="notification_gps_title">您的GPS没有开启，开启后可以为您提供更精确的定位服务。</string>
    <string name="notification_gps_name">移动定位器提醒您</string>
    <string name="notification_gps_content">您的GPS没有开启，开启后可以为您提供更精确的定位服务。</string>
</resources>
