<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <!-- 自定义标题栏-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@android:color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/navi_title"
                android:id="@+id/textView5" />
            <TextView
                android:textColor="@android:color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="默认导航"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="13dp"/>
    </LinearLayout>

    <!--高德导航-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/navi_gaode"
        android:clickable="true">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:background="@drawable/navi_gaodeditu_img_style"
            android:id="@+id/imageButton2" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/navi_text_gaode"
            android:id="@+id/textView6"
            android:textSize="30sp"
            android:textColor="@android:color/white"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/imageButton2"
            android:layout_toEndOf="@+id/imageButton2"
            android:layout_marginLeft="23dp"
            android:layout_marginStart="23dp" />
        <CheckBox
            android:id="@+id/navi_choice_gaode"
            style="@style/CheckboxStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <!--分割线-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/white"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>

    <!-- 百度导航-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/navi_baidu"
        android:clickable="true">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/navi_baidumap_img_style"
            android:clickable="false"
            android:id="@+id/imageButton" />
        <TextView
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/navi_baidu"
            android:id="@+id/textView7"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/imageButton"
            android:layout_toEndOf="@+id/imageButton"
            android:layout_marginLeft="23dp"
            android:layout_marginStart="23dp" />
        <CheckBox
            style="@style/CheckboxStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/navi_choice_baidu"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

</LinearLayout>
